# xcxk.xe

./: CMakeLists.txt  README.md
src/: CLI11.hpp
src/spdlog/: CMakeLists.txt
src/xcxk/xe/: CMakeLists.txt  core.cpp  init.cpp  init.h  main.cpp  version.h  version.h.in
src/xcxk/xe/core/: CMakeLists.txt  core.cpp  core.h  version.h
src/xcxk/xe/core/model/: model.h
src/xcxk/xe/init/: CMakeLists.txt  init.cpp  init.h  main.cpp  version.h
src/xcxk/xe/init/msg/: messages.h
src/xcxk/xe/model/: model.cpp  model.h
src/xcxk/xe/msg/: oms.h
